--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="col-md-6 col-sm-12">
-                <a href="./layout_editor/index.html" class="box" disabled>
+                <a href="./layout_editor/index.html" class="box">
                     <div class="box-icon">
                         <img src="./img_base/layout-icon.webp" class="img-fluid">
                     </div>
