--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <img src="./img_base/battle-simulator-icon.webp" class="img-fluid">
                     </div>
                     <div class="box-content">
-                        <h2>Battle Simulator</h2>
+                        <h2>Battle Simulator Beta</h2>
                         <hr>
                         <p>Try to attack or defend without any in-game losses.</p>
                     </div>
