--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </a>
             </div>
             <div class="col-md-6 col-sm-12">
-                <a href="./food_calculator/food-calculator.html" class="box">
+                <a href="./food_calculator/index.html" class="box">
                     <div class="box-icon">
                         <img src="./img_base/food-production-icon.webp" class="img-fluid">
                     </div>
