--- a/food_calculator/index.html
+++ b/food_calculator/index.html
@@ -71,7 +71,7 @@
                             </div>
 
                             <div class="col-md-3 col-6 col-sm-4 col-lg-3 form-group">
-                                <label for="">TFC Rotation Research</label>
+                                <label for="">TFC Rot. Research</label>
                                 <select name="res2" id="res2" class="form-control2">
                                     <option value="0">None</option>
                                     <option value="0.04">Level 1</option>
