--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
 
             <div class="col-md-6 col-sm-12">
-                <a href="#soon" class="box">
+                <a href="#soon" class="box" disabled>
                     <div class="box-icon">
                         <img src="./img_base/brewery-simulator-icon.webp" class="img-fluid">
                     </div>
@@ -90,7 +90,7 @@
             </div>
 
             <div class="col-md-6 col-sm-12">
-                <a href="#soon" class="box">
+                <a href="#soon" class="box" disabled>
                     <div class="box-icon">
                         <img src="./img_base/hall-of-legends-simulator-icon.webp" class="img-fluid">
                     </div>
@@ -102,7 +102,7 @@
                 </a>
             </div>
 
-            <div class="col-md-6 col-sm-12 position-relative">
+            <div class="col-md-6 col-sm-12">
                 <a href="./battle_simulator/index.html" class="box" disabled>
                     <div class="box-icon">
                         <img src="./img_base/battle-simulator-icon.webp" class="img-fluid">
@@ -115,7 +115,7 @@
                 </a>
             </div>
 
-            <div class="col-md-6 col-sm-12 position-relative">
+            <div class="col-md-6 col-sm-12">
                 <a href="./war_map/index.html" class="box" disabled>
                     <div class="box-icon">
                         <img src="./img_base/war-map-simulator.webp" class="img-fluid">
