--- a/layout_editor/index.html
+++ b/layout_editor/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="icon" type="image/webp" href="./img/favicon.ico">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Castle Layout Editor</title>
 </head>
 
@@ -217,7 +217,7 @@
         </div>
     </div>
 
-    <script src="script.js.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
