--- a/layout_editor/index.html
+++ b/layout_editor/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="icon" type="image/webp" href="./img/favicon.ico">
+    <link rel="icon" type="image/webp" href="../img_base/favicon.ico">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
     <title>Castle Layout Editor</title>
