--- a/courtyard_limit/index.html
+++ b/courtyard_limit/index.html
@@ -21,7 +21,11 @@
             <div class="col-12">
                 <h1>COURTYARD LIMIT CALCULATOR</h1>
             </div>
-
+            <a href="https://generalscamp.github.io/forum/" target="_blank" class="home-icon-link">
+                <div class="home-icon">
+                  <i class="bi bi-house"></i>
+                </div>
+              </a>
             <div class="col-12 collapse-area mb-2">
                 <h2 class="collapse-header">
                     <span class="header-title">BUILDINGS</span>
