--- a/layout_editor/index.html
+++ b/layout_editor/index.html
@@ -16,7 +16,11 @@
 </head>
 
 <body>
-
+    <a href="https://generalscamp.github.io/forum/" class="home-icon-link">
+        <div class="home-icon">
+          <i class="bi bi-house"></i>
+        </div>
+      </a>
     <div class="container">
         <div class="row">
             <div class="col-12" onmousemove="moveBuilding(event)" onmouseup="stopMovingBuilding()"
