--- a/food_calculator/index.html
+++ b/food_calculator/index.html
@@ -20,7 +20,11 @@
             <div class="col-12">
                 <h1>FOOD PRODUCTION CALCULATOR</h1>
             </div>
-
+            <a href="https://generalscamp.github.io/forum/" class="home-icon-link">
+                <div class="home-icon">
+                  <i class="bi bi-house"></i>
+                </div>
+              </a>
             <div class="col-12 collapse-area mb-2 result">
                 <h2 class="collapse-header">
                     <span class="header-title">RESULTS</span>
