--- a/layout_editor/index.html
+++ b/layout_editor/index.html
@@ -16,11 +16,6 @@
 </head>
 
 <body>
-    <a href="https://generalscamp.github.io/forum/" class="home-icon-link">
-        <div class="home-icon">
-          <i class="bi bi-house"></i>
-        </div>
-      </a>
     <div class="container">
         <div class="row">
             <div class="col-12" onmousemove="moveBuilding(event)" onmouseup="stopMovingBuilding()"
@@ -32,7 +27,7 @@
     <!-- Bottom navbar -->
     <div class="bottom-buttons-container">
         <button class="btn" data-bs-toggle="modal" data-bs-target="#buildingsModal" aria-label="Open buildings">
-            <i class="bi bi-house fs-3"></i>
+            <i class="bi bi-hammer fs-3"></i>
         </button>
         <button class="btn" data-bs-toggle="modal" data-bs-target="#storageModal" aria-label="Open storage">
             <i class="bi bi-box-seam fs-3"></i>
@@ -42,6 +37,9 @@
         </button>
         <button class="btn" data-bs-toggle="modal" data-bs-target="#settingsModal" aria-label="Open settings">
             <i class="bi bi-sliders fs-3"></i>
+        </button>
+        <button class="btn" onclick="window.location.href='https://generalscamp.github.io/forum/';" aria-label="Home">
+            <i class="bi bi-house fs-3"></i>
         </button>
     </div>
 
