--- a/battle_simulator/index.html
+++ b/battle_simulator/index.html
@@ -107,11 +107,19 @@
                     </div>
                     <div class="player-flank no-padding-fix margin-bug-fix d-flex">
                         <div class="row section-header">
-                            <div class="col-6" style="background-color: #D73A31;">ATTACKER</div>
-                            <div class="col-6" style="background-color: #357ABD;">DEFENDER</div>
+                            <div class="col-6" style="background-color: rgb(183 52 52);">ATTACKER</div>
+                            <div class="col-6" style="background-color: rgb(44 115 141);">DEFENDER</div>
                         </div>
                     </div>
                     <div class="modal-body battle-modal">
+
+                        <div class="player-flank no-padding-fix margin-bug-fix d-flex">
+                            <div class="row section-header report-troops-sum">
+                                <div class="col-6" style="background-color: rgb(183 52 52);">-</div>
+                                <div class="col-6" style="background-color: rgb(44 115 141);">-</div>
+                            </div>
+                        </div>
+
                         <!-- Battle Summary -->
                         <div class="player-flank text-center">
                             <span>SUMMARIZE</span>
@@ -130,7 +138,6 @@
                                         <!-- DEFENDERS -->
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                         <div id="wave-summary-container" class="player-flank margin-bug-fix">
