--- a/battle_simulator/index.html
+++ b/battle_simulator/index.html
@@ -111,7 +111,7 @@
                             <div class="col-6" style="background-color: rgb(44 115 141);">DEFENDER</div>
                         </div>
                     </div>
-                    <div class="modal-body battle-modal" ontouchstart="startTouchReport(event)" ontouchend="endTouchReport(event)">
+                    <div class="modal-body battle-modal">
 
                         <div class="player-flank no-padding-fix margin-bug-fix d-flex">
                             <div class="row section-header report-troops-sum">
