--- a/battle_simulator/index.html
+++ b/battle_simulator/index.html
@@ -55,12 +55,19 @@
                     <img src="./img/right-icon.webp" alt="R">
                 </button>
             </div>
+
             <button class="btn btn-danger flanks-button red-button" onclick="battleSimulation()">
                 <img src="./img/icon_attack.png" alt="Icon" class="icon" />
             </button>
+
             <button class="btn btn-dark flanks-button preset-button" onclick="openWaveCopyModal()">
                 <img src="./img/icon_presets.png" alt="Copy Wave" class="icon" />
             </button>
+
+            <button class="btn btn-dark flanks-button openAllWaves-button" onclick="openAllWaves()">
+                
+            </button>
+
         </div>
 
         <div class="player-flank d-flex justify-content-between align-items-center">
