--- a/index.html
+++ b/index.html
@@ -77,20 +77,20 @@
             </div>
 
             <div class="col-md-6 col-sm-12">
-                <a href="#soon" class="box" disabled>
+                <a href="./brewery_simulator/brewery.html" class="box">
                     <div class="box-icon">
                         <img src="./img_base/brewery-simulator-icon.webp" class="img-fluid">
                     </div>
                     <div class="box-content">
                         <h2>Brewery Simulator</h2>
                         <hr>
-                        <p>Calculate your in-game mead production easily.</p>
+                        <p>Calculate your in-game mead & honey production easily.</p>
                     </div>
                 </a>
             </div>
 
             <div class="col-md-6 col-sm-12">
-                <a href="#soon" class="box" disabled>
+                <a href="./hol_simualtor/index.html" class="box">
                     <div class="box-icon">
                         <img src="./img_base/hall-of-legends-simulator-icon.webp" class="img-fluid">
                     </div>
@@ -108,26 +108,12 @@
                         <img src="./img_base/battle-simulator-icon.webp" class="img-fluid">
                     </div>
                     <div class="box-content">
-                        <h2>Battle Simulator</h2>
+                        <h2>Battle Simulator (BETA)</h2>
                         <hr>
                         <p>Try to attack or defend without any in-game losses.</p>
                     </div>
                 </a>
             </div>
-
-            <div class="col-md-6 col-sm-12">
-                <a href="./war_map/index.html" class="box" disabled>
-                    <div class="box-icon">
-                        <img src="./img_base/war-map-simulator.webp" class="img-fluid">
-                    </div>
-                    <div class="box-content">
-                        <h2>War Map Simulator</h2>
-                        <hr>
-                        <p>Prepare for a war, check the closest enemies.</p>
-                    </div>
-                </a>
-            </div>
-
         </div>
     </div>
 </body>
