--- a/brewery_simulator/index.html
+++ b/brewery_simulator/index.html
@@ -33,7 +33,7 @@
                         <div class="collapse show results">
                             <p class="il">TOTAL HONEY PRODUCTION: <i id="honeyProd">0</i></p>
                             <hr>
-                            <p>TOTAL MEAD PRODUCTION: <i id="food">0</i> food + <i id="honey">0</i> honey = <i
+                            <p>TOTAL MEAD PRODUCTION: <br> <i id="food">0</i> food + <i id="honey">0</i> honey = <i
                                     id="mead">0</i> mead</p>
                             <hr>
                             <p class="il">NUMBER OF UNITS YOU CAN KEEP: <i id="unitsHold">0</i></p>
@@ -312,7 +312,7 @@
                                     </select>
                                 </div>
                                 <div class="col-md-3 col-6 col-sm-4 col-lg-3 form-group">
-                                    <label for="research">Northman tankards research</label>
+                                    <label for="research">Research (NT)</label>
                                     <select class="form-control2" name="research" id="research">
                                         <option value="0">No</option>
                                         <option value="0.04">Level 1</option>
@@ -360,7 +360,7 @@
                                     </select>
                                 </div>
                                 <div class="col-md-3 col-6 col-sm-4 col-lg-3 form-group">
-                                    <label for="baseElem">Primary construction item</label>
+                                    <label for="baseElem">Primary item</label>
                                     <select class="form-control2" name="baseElem" id="baseElem">
                                         <option value="0">No</option>
                                         <option value="70">Level 1</option>
@@ -391,7 +391,7 @@
                                     </select>
                                 </div>
                                 <div class="col-md-3 col-6 col-sm-4 col-lg-3 form-group">
-                                    <label for="relicElem">Relic construction item</label>
+                                    <label for="relicElem">Relic item</label>
                                     <select class="form-control2" name="relicElem" id="relicElem">
                                         <option value="0">No</option>
                                         <option value="10200">Level 1</option>
@@ -453,7 +453,7 @@
                                         placeholder="e.g. 10000" min="0">
                                 </div>
                                 <div class="col-md-3 col-6 col-sm-4 col-lg-3 form-group">
-                                    <label for="ratio">Mead production ratio</label>
+                                    <label for="ratio">Production ratio</label>
                                     <div class="brewery-production-control-input">
                                         <input class="form-control2" type="number" min="0" max="100" value="0" id="productionInput">
                                     </div>
