--- a/hol_simualtor/index.html
+++ b/hol_simualtor/index.html
@@ -26,7 +26,7 @@
         </div>
         <div id="attack-container" class="containerr active">
             <!-- Row 1 -->
-            <div class="row justify-content-left position-relative row-real" id="row-1">
+            <div class="row justify-content-left position-relative row-real mb-4" id="row-1">
                 <div class="col-2 text-center">
                     <div class=" square">
                         <div class="big-number">1</div>
@@ -64,7 +64,7 @@
             </div>
 
             <!-- Row 2 -->
-            <div class="row justify-content-left position-relative mt-4 row-real" id="row-2">
+            <div class="row justify-content-left position-relative mt-4 row-real mb-4" id="row-2">
                 <div class="col-2 text-center">
                     <div class=" square">
                         <div class="big-number">2</div>
@@ -109,7 +109,7 @@
             </div>
 
             <!-- Extra 1 -->
-            <div class="row justify-content-left position-relative mt-2">
+            <div class="row justify-content-left position-relative mt-2 mb-5">
                 <div class="col-5 text-center">
                 </div>
                 <div class="col-2 text-center extra1">
@@ -121,7 +121,7 @@
             </div>
 
             <!-- Row 3 -->
-            <div class="row justify-content-left position-relative mt-4 row-real" id="row-3">
+            <div class="row justify-content-left position-relative mt-4 row-real mb-4" id="row-3">
                 <div class="col-2 text-center">
                     <div class=" square">
                         <div class="big-number">3</div>
@@ -166,7 +166,7 @@
             </div>
 
             <!-- Row 4 -->
-            <div class="row justify-content-left position-relative mt-4 row-real" id="row-4">
+            <div class="row justify-content-left position-relative mt-4 row-real mb-4" id="row-4">
                 <div class="col-2 text-center">
                     <div class=" square">
                         <div class="big-number">4</div>
@@ -211,7 +211,7 @@
             </div>
 
             <!-- Row 5 -->
-            <div class="row justify-content-left position-relative mt-4 row-real" id="row-5">
+            <div class="row justify-content-left position-relative mt-4 row-real mb-4" id="row-5">
                 <div class="col-2 text-center">
                     <div class=" square">
                         <div class="big-number">5</div>
@@ -256,7 +256,7 @@
             </div>
 
             <!-- Extra 2 -->
-            <div class="row justify-content-left position-relative mt-2">
+            <div class="row justify-content-left position-relative mt-2 mb-4">
                 <div class="col-5 text-center">
                 </div>
                 <div class="col-2 text-center extra2">
@@ -271,7 +271,7 @@
 
     <div id="defense-container" class="containerr">
             <!-- Row 1 -->
-            <div class="row justify-content-left position-relative row-real" id="row-1">
+            <div class="row justify-content-left position-relative row-real mb-4" id="row-1">
                 <div class="col-2 text-center">
                     <div class=" square">
                         <div class="big-number">1</div>
@@ -309,7 +309,7 @@
             </div>
 
             <!-- Row 2 -->
-            <div class="row justify-content-left position-relative mt-4 row-real" id="row-2">
+            <div class="row justify-content-left position-relative mt-4 row-real mb-4" id="row-2">
                 <div class="col-2 text-center">
                     <div class=" square">
                         <div class="big-number">2</div>
@@ -354,7 +354,7 @@
             </div>
 
             <!-- Extra 1 -->
-            <div class="row justify-content-left position-relative mt-2">
+            <div class="row justify-content-left position-relative mt-2 mb-5">
                 <div class="col-5 text-center">
                 </div>
                 <div class="col-2 text-center extra1">
@@ -366,7 +366,7 @@
             </div>
 
             <!-- Row 3 -->
-            <div class="row justify-content-left position-relative mt-4 row-real" id="row-3">
+            <div class="row justify-content-left position-relative mt-4 row-real mb-4" id="row-3">
                 <div class="col-2 text-center">
                     <div class=" square">
                         <div class="big-number">3</div>
@@ -411,7 +411,7 @@
             </div>
 
             <!-- Row 4 -->
-            <div class="row justify-content-left position-relative mt-4 row-real" id="row-4">
+            <div class="row justify-content-left position-relative mt-4 row-real mb-4" id="row-4">
                 <div class="col-2 text-center">
                     <div class=" square">
                         <div class="big-number">4</div>
@@ -456,7 +456,7 @@
             </div>
 
             <!-- Row 5 -->
-            <div class="row justify-content-left position-relative mt-4 row-real" id="row-5">
+            <div class="row justify-content-left position-relative mt-4 row-real mb-4" id="row-5">
                 <div class="col-2 text-center">
                     <div class=" square">
                         <div class="big-number">5</div>
@@ -501,7 +501,7 @@
             </div>
 
             <!-- Extra 2 -->
-            <div class="row justify-content-left position-relative mt-2 mb-3">
+            <div class="row justify-content-left position-relative mt-2 mb-4">
                 <div class="col-5 text-center">
                 </div>
                 <div class="col-2 text-center extra2">
