--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
 
             <div class="col-md-6 col-sm-12">
-                <a href="./hol_simualtor/index.html" class="box">
+                <a href="./hol_simulator/index.html" class="box">
                     <div class="box-icon">
                         <img src="./img_base/hall-of-legends-simulator-icon.webp" class="img-fluid">
                     </div>
