--- a/hol_simulator/index.html
+++ b/hol_simulator/index.html
@@ -14,8 +14,8 @@
     <div class="container">
         <!-- Details -->
         <div class="details d-flex justify-content-center">
-            <span>Details tab (soon)</span>
-        </div>
+            <span id="details-text">Click on a skill to view its description.</span>
+        </div>              
 
         <div class="mb-3 text-center details2">
             <div class="d-flex justify-content-between">
