--- a/hol_simulator/index.html
+++ b/hol_simulator/index.html
@@ -5,9 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HoL Simulator</title>
-    <link rel="icon" type="image/png" href="../img_base/favicon.ico">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="icon" type="image/webp" href="../img_base/favicon.ico">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css"
+        rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
@@ -16,7 +21,11 @@
         <div class="details d-flex justify-content-center">
             <span id="details-text">Click on a skill to view its description.</span>
         </div>              
-
+        <a href="https://generalscamp.github.io/forum/" class="home-icon-link">
+            <div class="home-icon">
+              <i class="bi bi-house"></i>
+            </div>
+          </a>
         <div class="mb-3 text-center details2">
             <div class="d-flex justify-content-between">
                 <span class="section-title" id="attack-toggle">Attack (<span id="total-points-attack">0</span> points)</span>
