--- a/hol_simulator/index.html
+++ b/hol_simulator/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        <div class="accordion scrollable-content" id="attackWaves">
+        <div class="accordion scrollable-content">
             <div id="attack-container" class="containerr active">
                 <!-- Row 1 -->
                 <div class="row justify-content-left position-relative row-real mb-4" id="row-1">
