--- a/food_calculator/index.html
+++ b/food_calculator/index.html
@@ -192,8 +192,9 @@
                                 <label for="">Gallantry Title</label>
                                 <select class="form-control2" name="beri" id="beri">
                                     <option value="0">Lower</option>
-                                    <option value="kingdoms">the Widowmaker</option>
-                                    <option value="both">Weapon Master</option>
+                                    <option value="weaponmaster">Weapon Master</option>
+                                    <option value="deathclaw">the Deathclaw</option>
+                                    <option value="widowmaker">the Widowmaker</option>
                                 </select>
                             </div>
 
