--- a/layout_editor/index.html
+++ b/layout_editor/index.html
@@ -11,8 +11,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="icon" type="image/webp" href="../img_base/favicon.ico">
     <meta charset="UTF-8">
+    <meta name="author" content="Dániel (Generals Camp)">
+    <meta name="description" content="Efficient castle layout editor for Goodgame Empire!">
+    <meta name="keywords"
+        content="castle planner, layout optimizer, GG Empire, building placement, strategy tool, castle design, grid system, base layout, optimization, web-based tool, GGE, GGS, Goodgame Studio">
     <link rel="stylesheet" href="styles.css">
-    <title>Castle Layout Editor</title>
+    <title>Castle Layout Editor 2025</title>
 </head>
 
 <body>
@@ -79,7 +83,7 @@
                         </button>
                     </div>
                 </div>
-                
+
                 <div class="modal-body bugfix1">
                     <div class="row" id="buildingsGrid">
                         <!-- Dinamic items -->
@@ -100,8 +104,7 @@
                     <!-- Optimize -->
                     <div class="form-group">
                         <label for="optimizeBtn">Optimize:</label>
-                        <button id="optimizeBtn" class="btn btn-black" onclick="toggleOptimization()"
-                            style="font-weight: bolder;">ON</button>
+                        <button id="optimizeBtn" class="btn btn-black" style="font-weight: bolder;">ON</button>
                     </div>
                     <!-- Expansion -->
                     <div class="form-group">
@@ -112,8 +115,8 @@
                     <!-- Fullscreen -->
                     <div class="form-group mobileOnly">
                         <label for="fullscreenBtn">Fullscreen:</label>
-                        <button id="fullscreenBtn" onclick="toggleFullscreen()" aria-label="Fullscreen"
-                            class="btn btn-black" style="font-weight: bolder;">OFF</button>
+                        <button id="fullscreenBtn" aria-label="Fullscreen" class="btn btn-black"
+                            style="font-weight: bolder;">OFF</button>
                     </div>
                 </div>
 
