--- a/layout_editor/index.html
+++ b/layout_editor/index.html
@@ -55,7 +55,7 @@
                     <h5 class="modal-title" id="buildingsModalLabel">Buildings</h5>
                     <div class="d-flex justify-content-end align-items-center w-100">
                         <input type="text" id="buildingSearch" class="form-control me-2" placeholder="Search buildings">
-                        <div class="dropdown me-2">
+                        <div class="dropdown me-2 bugfix1">
                             <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="filterDropdown"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="bi bi-funnel"></i>
