--- a/layout_editor/index.html
+++ b/layout_editor/index.html
@@ -52,7 +52,7 @@
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content bugfix1 buildingList">
                 <div class="modal-header bugfix1">
-                    <h5 class="modal-title" id="buildingsModalLabel">Buildings</h5>
+                    <h5 class="modal-title" id="buildingsModalLabel">BUILDINGS</h5>
                     <div class="d-flex justify-content-end align-items-center w-100">
                         <input type="text" id="buildingSearch" class="form-control me-2" placeholder="Search buildings">
                         <div class="dropdown me-2 bugfix1">
@@ -129,7 +129,7 @@
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content bugfix1">
                 <div class="modal-header bugfix1">
-                    <h5 class="modal-title" id="storageModalLabel">BUILDING STORAGE</h5>
+                    <h5 class="modal-title" id="storageModalLabel">PLACED BUILDING</h5>
                 </div>
                 <div class="modal-body bugfix1">
                     <div id="buildingList" class="grid-container">
@@ -151,7 +151,7 @@
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content bugfix1">
                 <div class="modal-header bugfix1">
-                    <h5 class="modal-title" id="savesModalLabel">Saves</h5>
+                    <h5 class="modal-title" id="savesModalLabel">SAVE & LOAD LAYOUTS</h5>
                 </div>
                 <div class="modal-body bugfix1">
                     <div id="save-slots">
