--- a/layout_editor/index.html
+++ b/layout_editor/index.html
@@ -129,7 +129,7 @@
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content bugfix1">
                 <div class="modal-header bugfix1">
-                    <h5 class="modal-title" id="storageModalLabel">PLACED BUILDING</h5>
+                    <h5 class="modal-title" id="storageModalLabel">PLACED BUILDINGS</h5>
                 </div>
                 <div class="modal-body bugfix1">
                     <div id="buildingList" class="grid-container">
