--- a/index.html
+++ b/index.html
@@ -103,6 +103,19 @@
             </div>
 
             <div class="col-md-6 col-sm-12">
+                <a href="./collector_calculator/index.html" class="box">
+                    <div class="box-icon">
+                        <img src="./img_base/collector.webp" class="img-fluid">
+                    </div>
+                    <div class="box-content">
+                        <h2>Collector event calculator</h2>
+                        <hr>
+                        <p>Calculate that how many points you need to reach your goal.</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="col-md-6 col-sm-12">
                 <a href="./battle_simulator/index.html" class="box" disabled>
                     <div class="box-icon">
                         <img src="./img_base/battle-simulator-icon.webp" class="img-fluid">
