--- a/layout_editor/index.html
+++ b/layout_editor/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container mt-4">
         <div class="row">
             <div class="col-12" onmousemove="moveBuilding(event)" onmouseup="stopMovingBuilding()"
                 oncontextmenu="removeBuilding(event)">
